# AuraClass

./: .gitignore  Backend_plan.md  DEPLOY_README.md  Project_plan.md  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  frontend_plan.md  install_and_prepare.py  package-lock.json  package.json  quant_record_import_template.csv  start_all.sh  start_project.py  高中班级量化_Gemini研究.docx
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  alembic.ini.bk  entrypoint.sh  env.template  pyproject.toml  requirements.txt  run.py  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 0f4283b55d09_.py  16e9c9b0e885_modify_ai_table.py  25df4feaa9a7_add_uploads_model.py  3a7b0f6be782_change_processing_time_to_float.py  42e557d4b719_merge_heads.py  769549423658_init_db.py  b010d2fb486b_add_quant_item_fields_and_category_model.py  b0f602c2b6b4_modify_ai_table.py  b37dbd38e7c2_rename_class_to_classes.py  b47f9c020691_update_student_model.py  bc04b360072e_add_category_id_to_quant_item.py  f618591bbdc2_modify_ai_conversation.py  remove_ai_file_attachment.py
backend/app/: Dockerfile  README.md  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  errors.py  logging.py  monitoring.py  permissions.py  rbac_model.conf  rbac_policy.csv  security.py
backend/app/crud/: ai_conversation.py  ai_message.py  base.py  class_crud.py  notification.py  quant_item.py  quant_record.py  (+5 more)
backend/scripts/: init_test_data.py  send_test_notification.py  test_websocket.py  update_category_ids.py  update_student_fields.py
(+256 files in other folders)
